dynamically finds collections and episodes and updates the frame

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "directory": "/Users/dylanclarry/Documents",
-    "outputDirectory": "/Users/dylanclarry/Downloads",
-    "language": "Japanese (\u65e5\u672c\u8a9e)"
+    "directory": "/Users/dylanclarry/Documents/bsubs_testing",
+    "outputDirectory": "/Users/dylanclarry/Documents/bsubs_output",
+    "language": "Chinese (\u7b80\u4f53\u4e2d\u6587)"
 }
